[project]
name = "camerai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ai-edge-litert>=2.0.3",
    "aiofiles>=25.1.0",
    "grpcio>=1.76.0",
    "opencv-python>=4.12.0.88",
    "pika>=1.3.2",
    "pika-stubs>=0.1.3",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.4",
    "tenacity>=9.1.2",
    "tensorflow>=2.20.0",
    "urllib3>=2.5.0",
]

[tool.ruff]
line-length = 120
